[gd_scene load_steps=20 format=4 uid="uid://d4ij56ox5hyws"]

[ext_resource type="PackedScene" uid="uid://cok6gvdxjgywq" path="res://scenes/Character.tscn" id="1_u4q5n"]
[ext_resource type="Script" uid="uid://byikc5yvpboxi" path="res://scripts/Attributes/PlayerStats.gd" id="2_3jcu1"]
[ext_resource type="TileSet" uid="uid://c4j5ldm462u81" path="res://assets/PlaceHolderTileSet.tres" id="3_plvhx"]
[ext_resource type="PackedScene" uid="uid://d0oqjb0bdhld4" path="res://scenes/Collectable/collectable.tscn" id="4_qhry8"]
[ext_resource type="Script" uid="uid://ba3whgs6gctxp" path="res://scripts/Collectables/Status_Collectable.gd" id="5_51bm3"]
[ext_resource type="Script" uid="uid://cuw8fedllxgs4" path="res://scripts/StatusEffects/Status_Effect.gd" id="6_5iyhf"]
[ext_resource type="Script" uid="uid://de7t5vkp8wkks" path="res://scripts/StatusEffects/ModifierStatusEffect.gd" id="7_wot41"]
[ext_resource type="Texture2D" uid="uid://cisfdy475chke" path="res://assets/ColorPlaceHolderAtlas.tres" id="8_7oo7j"]
[ext_resource type="Script" uid="uid://bq2fxmnqqcga5" path="res://scripts/Objects/FallZone.gd" id="9_jtgls"]
[ext_resource type="Texture2D" uid="uid://cq32eye21ocrc" path="res://assets/goatedShopSprite.png" id="10_swmqd"]
[ext_resource type="PackedScene" uid="uid://b5k71jys0pd2j" path="res://scenes/shop.tscn" id="11_vieqy"]

[sub_resource type="Resource" id="Resource_8hcw6"]
script = ExtResource("2_3jcu1")
_acceleration = 50.0
_deacceleration = 100.0
max_speed = 300.0
in_air_acceleration = 20.0
in_air_deacceleration = 20.0
jump_force = -450.0
_gravity = 1000.0
falling_gravity = 2000.0
coyote_time = 0.1
jump_buffer_time = 0.1
variable_jump_multiplier = 0.5
max_falling_speed = 50.0
metadata/_custom_type_script = "uid://byikc5yvpboxi"

[sub_resource type="Resource" id="Resource_nrstc"]
script = ExtResource("7_wot41")
metadata/_custom_type_script = "uid://de7t5vkp8wkks"

[sub_resource type="Resource" id="Resource_xwrkq"]
script = ExtResource("7_wot41")
metadata/_custom_type_script = "uid://de7t5vkp8wkks"

[sub_resource type="Resource" id="Resource_7448y"]
script = ExtResource("7_wot41")
metadata/_custom_type_script = "uid://de7t5vkp8wkks"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dvny0"]
size = Vector2(128, 128)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ixgyf"]

[sub_resource type="GDScript" id="GDScript_ixgyf"]
script/source = "extends Area2D

func _ready():
	$Shop.visible = false

func _process(delta):
	pass


func _on_body_entered(body):
	print(\"Entered:\", body.name, \"Type:\", body.get_class())
	if body is CharacterBody2D:
		print(\"Entered body name:\", body.name)
		get_tree().paused = true
		$Shop.visible = true
		get_node(\"Shop/Anim\").play(\"TransIn\")
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8hcw6"]
size = Vector2(80, 68)

[node name="TestWorld" type="Node2D"]

[node name="CharacterBody2D" parent="." instance=ExtResource("1_u4q5n")]
position = Vector2(-7, 224)
stats = SubResource("Resource_8hcw6")

[node name="LayerHolder" type="Node2D" parent="."]

[node name="ForegroundLayer" type="TileMapLayer" parent="LayerHolder"]
modulate = Color(1, 0.56, 0.56, 1)
z_index = 1
collision_enabled = false

[node name="GroundLayer" type="TileMapLayer" parent="LayerHolder"]
position = Vector2(1, 0)
tile_map_data = PackedByteArray("AAAOAAkAAQANAAMAAAAOAAgAAQANAAEAAAANAAkAAQAMAAMAAAANAAgAAQAMAAEAAAAMAAkAAQAMAAMAAAAMAAgAAQAMAAEAAAALAAkAAQAMAAMAAAALAAgAAQAMAAEAAAAKAAkAAQAMAAMAAAAKAAgAAQAMAAEAAAAJAAkAAQAMAAMAAAAJAAgAAQAMAAEAAAAIAAkAAQAMAAMAAAAIAAgAAQAMAAEAAAAHAAkAAQAMAAMAAAAHAAgAAQAMAAEAAAAGAAkAAQAMAAMAAAAGAAgAAQAMAAEAAAAFAAkAAQAMAAMAAAAFAAgAAQAMAAEAAAAEAAkAAQAMAAMAAAAEAAgAAQAMAAEAAAADAAkAAQAMAAMAAAADAAgAAQAMAAEAAAACAAkAAQAMAAMAAAACAAgAAQAMAAEAAAABAAkAAQAMAAMAAAABAAgAAQAMAAEAAAAAAAkAAQAMAAMAAAAAAAgAAQAMAAEAAAD//wkAAQAMAAMAAAD//wgAAQAMAAEAAAD+/wkAAQAMAAMAAAD+/wgAAQAMAAEAAAD9/wkAAQAMAAMAAAD9/wgAAQAMAAEAAAD8/wkAAQAMAAMAAAD8/wgAAQAMAAEAAAD7/wkAAQAMAAMAAAD7/wgAAQAMAAEAAAD6/wkAAQAMAAMAAAD6/wgAAQAMAAEAAAD5/wkAAQAMAAMAAAD5/wgAAQAMAAEAAAD4/wkAAQAMAAMAAAD4/wgAAQAMAAEAAAD3/wkAAQAMAAMAAAD3/wgAAQAMAAEAAAD2/wkAAQAMAAMAAAD2/wgAAQAMAAEAAAD1/wkAAQAMAAMAAAD1/wgAAQAMAAEAAAD0/wkAAQAMAAMAAAD0/wgAAQAMAAEAAADz/wkAAQAMAAMAAADz/wgAAQAMAAEAAADy/wkAAQAMAAMAAADy/wgAAQAMAAEAAADx/wkAAQAMAAMAAADx/wgAAQAMAAEAAADw/wkAAQAMAAMAAADw/wgAAQAMAAEAAADv/wkAAQALAAMAAADv/wgAAQALAAEAAAAUAAgAAQALAAEAAAAUAAkAAQALAAMAAAAVAAkAAQANAAMAAAAVAAgAAQANAAEAAAARAAgAAQALAAEAAAARAAkAAQALAAMAAAASAAgAAQANAAEAAAASAAkAAQANAAMAAAAXAAgAAQALAAEAAAAXAAkAAQALAAMAAAAYAAgAAQANAAEAAAAYAAkAAQANAAMAAAAaAAcAAQALAAEAAAAaAAgAAQALAAMAAAAbAAcAAQANAAEAAAAbAAgAAQANAAMAAAAdAAYAAQALAAEAAAAdAAcAAQALAAMAAAAeAAYAAQANAAEAAAAeAAcAAQANAAMAAAAgAAUAAQALAAEAAAAgAAYAAQALAAMAAAAhAAUAAQANAAEAAAAhAAYAAQANAAMAAAAjAAQAAQALAAEAAAAjAAUAAQALAAMAAAAkAAQAAQANAAEAAAAkAAUAAQANAAMAAAAeAAEAAQALAAEAAAAeAAIAAQALAAMAAAAfAAEAAQANAAEAAAAfAAIAAQANAAMAAAAmAAIAAQALAAEAAAAmAAMAAQALAAMAAAAnAAIAAQANAAEAAAAnAAMAAQANAAMAAAAhAAAAAQALAAEAAAAhAAEAAQALAAMAAAAiAAAAAQANAAEAAAAiAAEAAQANAAMAAAAaAP//AQALAAEAAAAaAAAAAQALAAMAAAAbAP//AQANAAEAAAAbAAAAAQANAAMAAAA=")
tile_set = ExtResource("3_plvhx")
use_kinematic_bodies = true

[node name="BackgroundLayer" type="TileMapLayer" parent="LayerHolder"]
modulate = Color(0.187176, 0.187176, 0.187176, 1)
z_index = -1
collision_enabled = false

[node name="Status_Collectable" parent="." instance=ExtResource("4_qhry8")]
position = Vector2(224, 224)
scale = Vector2(0.25, 0.25)
script = ExtResource("5_51bm3")
statuses = Array[ExtResource("6_5iyhf")]([SubResource("Resource_nrstc"), SubResource("Resource_xwrkq"), SubResource("Resource_7448y")])

[node name="Sprite2D" parent="Status_Collectable" index="0"]
texture = ExtResource("8_7oo7j")
hframes = 13
vframes = 14

[node name="CollisionShape2D" parent="Status_Collectable" index="1"]
shape = SubResource("RectangleShape2D_dvny0")

[node name="Status_Collectable2" type="Area2D" parent="."]
position = Vector2(-183, 224)
scale = Vector2(0.25, 0.25)
script = ExtResource("5_51bm3")
metadata/_custom_type_script = "uid://ba3whgs6gctxp"

[node name="Sprite2D" type="Sprite2D" parent="Status_Collectable2"]
texture = ExtResource("8_7oo7j")
hframes = 13
vframes = 14
frame = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Status_Collectable2"]
shape = SubResource("RectangleShape2D_dvny0")

[node name="FallZone" type="Area2D" parent="."]
position = Vector2(0, 512)
scale = Vector2(176.68, -1.94997)
script = ExtResource("9_jtgls")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallZone"]
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_ixgyf")

[node name="ShopArea2D" type="Area2D" parent="."]
script = SubResource("GDScript_ixgyf")

[node name="Sprite2D" type="Sprite2D" parent="ShopArea2D"]
process_mode = 3
z_index = -1
position = Vector2(-470, 211.781)
scale = Vector2(0.22641, 0.201293)
texture = ExtResource("10_swmqd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShopArea2D"]
position = Vector2(-470, 221)
shape = SubResource("RectangleShape2D_8hcw6")

[node name="Shop" parent="ShopArea2D" instance=ExtResource("11_vieqy")]
visible = false

[connection signal="body_entered" from="FallZone" to="FallZone" method="_on_body_entered"]
[connection signal="body_entered" from="ShopArea2D" to="ShopArea2D" method="_on_body_entered"]

[editable path="Status_Collectable"]
